--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Gym Lead Booker (Demo Mode)"
 authors = ["Codex"]
 license = "MIT"
-repository = ""
+repository = "https://github.com/sutton-OS/GoldBot"
 edition = "2021"
 rust-version = "1.70"
 
@@ -12,7 +12,7 @@ rust-version = "1.70"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.6", features = ["shell-open"] }
+tauri = { version = "1.6", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
